[gd_scene load_steps=4 format=3 uid="uid://d3gxcmbs54oeg"]

[ext_resource type="Script" path="res://Roles/Hacker-Interact/hacker_interact.gd" id="1_rtvs3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kaxwt"]
radius = 72.0

[sub_resource type="LabelSettings" id="LabelSettings_8vpmr"]
font_size = 50

[node name="HackerInteract" type="Node2D"]
script = ExtResource("1_rtvs3")

[node name="InteractRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
z_index = 10
shape = SubResource("CircleShape2D_kaxwt")

[node name="InteractLabel" type="Label" parent="."]
z_index = 10
offset_left = -112.0
offset_top = -207.0
offset_right = 113.0
offset_bottom = -138.0
theme_override_font_sizes/font_size = 15
text = "E to hack"
label_settings = SubResource("LabelSettings_8vpmr")

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
